fixing some layout issues on mobile layout

--- a/src/wp-content/themes/timtec/assets/styles/layouts/_responsive.scss
+++ b/src/wp-content/themes/timtec/assets/styles/layouts/_responsive.scss
@@ -69,14 +69,13 @@
         }
         .text {
             color: #fff;
-            font-weight: normal;
-            margin: 0;
+            margin: 0 !important;
         }
         .links {
             margin: 15px 0;
         }
         h3, .text, .links {
-            text-align: center;
+            text-align: center !important;
         }
         .title, .text, .links {
             position: relative;
